--- a/react-ui/public/index.html
+++ b/react-ui/public/index.html
@@ -13,7 +13,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Kids on Stage</title>
   </head>
   <body>
     <div id="root"></div>
@@ -27,5 +27,6 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
+    <script src="https://js.stripe.com/v3/"></script>
   </body>
 </html>
